syntax = "proto3";

package account.v1;

option go_package = ".";

message AccountResponse {
    string token = 1;
    string redirect = 2;
}