syntax = "proto3";

package account.v1;

option go_package = ".";

message LoginRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
}